dist/1.0/bin/sample/retrieveUnpackaged/objects/Generic_Product__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_to_Synchronize__c</fullName>
        <label>Bundle to Synchronize</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Generic Product Class for discounts handling.</description>
        <inlineHelpText>Generic Product Class for discounts handling.</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Discount GP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Products will be marked with multipicklist field GTS Location (GTS Poland, GTS Slovakia etc. ) mainly to separate Products for SK and other countries</description>
        <inlineHelpText>Please choose countires for this produ</inlineHelpText>
        <label>GTS_Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Label_CZE__c</fullName>
        <label>Label (Czech)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Eng__c</fullName>
        <label>Label (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_HUN__c</fullName>
        <label>Label (Hungarian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_POL__c</fullName>
        <label>Label (Polish)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_ROU__c</fullName>
        <label>Label (Romanian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_SVK__c</fullName>
        <label>Label (Slovak)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if a GP is used for storing phone lines</description>
        <inlineHelpText>Specifies if a GP is used for storing phone lines</inlineHelpText>
        <label>Phone Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisioning_Type__c</fullName>
        <label>Provisioning Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <label>UniqueName</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Generic Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provisioning_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Generic Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>